--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 
 <script>
     function generatePassword() {
-        const length = 12; // Password length
+        const length = 12; 
         const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()_+[]{}|;:,.<>?';
         let password = '';
         for (let i = 0; i < length; i++) {
